Add night mode and improve theme logic

--- a/ibus-tweaker@tuberry.github.com/stylesheet.css
+++ b/ibus-tweaker@tuberry.github.com/stylesheet.css
@@ -1,476 +1,387 @@
 
+
 /*
- * red : #DE3163
+ *   Common
  */
-.ibus-tweaker-red-candidate-popup-content {
-    background-color: rgba(255, 255, 255, 1);
-    border-color: rgba(222, 49, 99, 0.9);
+
+
+.ibus-tweaker-candidate-popup-content {
     border-radius: 0;
     border-width: 1px;
     padding: 0 !important;
 }
 
-.ibus-tweaker-red-candidate-popup-text {
-    color: rgba(0, 0, 0, 1);
+.ibus-tweaker-candidate-popup-text {
     border-width: 0;
     border-bottom-width: 1px;
-    border-color: rgba(222, 49, 99, 0.9);
     padding: 0;
 }
 
-.ibus-tweaker-red-candidate-box {
-    color: rgba(0, 0, 0, 1);
+.ibus-tweaker-candidate-box {
     transition-duration: 100ms;
     border-radius: 0;
     padding: 8px;
 }
 
-.ibus-tweaker-red-candidate-box .ibus-tweaker-red-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
+.ibus-tweaker-candidate-label {
+    padding: 0 4px;
 }
 
-.ibus-tweaker-red-candidate-box:hover {
-    background-color: rgba(222, 49, 99, 0.5);
+/* hide page buttons */
+.ibus-tweaker-candidate-page-button,
+.ibus-tweaker-candidate-page-button-box,
+.ibus-tweaker-candidate-page-button-previous,
+.ibus-tweaker-candidate-page-button-next,
+.ibus-tweaker-candidate-page-button-icon {
+    width: 0 !important;
+    height: 0 !important;
+    border-width: 0 !important;
+    color: transparent !important;
+    background-color: transparent !important;
 }
 
-.ibus-tweaker-red-candidate-box:selected {
+.ibus-tweaker-candidate-popup-boxpointer {
+    -arrow-border-radius: 0;
+    -arrow-rise: 5px;
+}
+
+/*
+ *   Text
+ */
+
+
+.ibus-tweaker-candidate-box {
+    color: rgba(0, 0, 0, 1);
+}
+
+.ibus-tweaker-candidate-box:selected .ibus-tweaker-candidate-index {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
+    color: rgba(0, 0, 0, 0.6);
+}
+.night .ibus-tweaker-candidate-box {
+    color: rgba(255, 255, 255, 1);
+}
+
+.night .ibus-tweaker-candidate-box:selected .ibus-tweaker-candidate-index {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.night .ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+/*
+    Colors
+ */
+
+
+/*
+ *  #DE3163
+ */
+.red .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(255, 255, 255, 1);
+    border-color: rgba(222, 49, 99, 0.9);
+}
+
+.red .ibus-tweaker-candidate-popup-text {
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(222, 49, 99, 0.9);
+}
+
+.red .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(222, 49, 99, 0.6);
+}
+
+.red .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(222, 49, 99, 0.9);
 }
-
-.ibus-tweaker-red-candidate-box:selected .ibus-tweaker-red-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #FC8EAC
+ */
+.night-red .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(252, 142, 172, 0.8);
 }
 
-.ibus-tweaker-red-candidate-label {
-    padding: 0 4px;
+.night-red .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(252, 142, 172, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-red-candidate-page-button,
-.ibus-tweaker-red-candidate-page-button-box,
-.ibus-tweaker-red-candidate-page-button-previous,
-.ibus-tweaker-red-candidate-page-button-next,
-.ibus-tweaker-red-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-red .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(252, 142, 172, 0.6);
 }
 
-.ibus-tweaker-red-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-red .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(252, 142, 172, 0.8);
 }
 
 
 /*
- * green : #20B51A
+ *  #20B51A
  */
-.ibus-tweaker-green-candidate-popup-content {
+.green .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(32, 181, 26, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-green-candidate-popup-text {
+.green .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(32, 181, 26, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-green-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.green .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(32, 181, 26, 0.6);
 }
 
-.ibus-tweaker-green-candidate-box .ibus-tweaker-green-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-green-candidate-box:hover {
-    background-color: rgba(32, 181, 26, 0.5);
-}
-
-.ibus-tweaker-green-candidate-box:selected {
+.green .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(32, 181, 26, 0.9);
 }
-
-.ibus-tweaker-green-candidate-box:selected .ibus-tweaker-green-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #A4ED85
+ */
+.night-green .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(164, 237, 133, 0.8);
 }
 
-.ibus-tweaker-green-candidate-label {
-    padding: 0 4px;
+.night-green .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(164, 237, 133, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-green-candidate-page-button,
-.ibus-tweaker-green-candidate-page-button-box,
-.ibus-tweaker-green-candidate-page-button-previous,
-.ibus-tweaker-green-candidate-page-button-next,
-.ibus-tweaker-green-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-green .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(164, 237, 133, 0.6);
 }
 
-.ibus-tweaker-green-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-green .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(164, 237, 133, 0.8);
 }
 
 
 /*
- * orange : #E18A3B
+ *  #E18A3B
  */
-.ibus-tweaker-orange-candidate-popup-content {
+.orange .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(225, 138, 59, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-orange-candidate-popup-text {
+.orange .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(225, 138, 59, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-orange-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.orange .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(225, 138, 59, 0.6);
 }
 
-.ibus-tweaker-orange-candidate-box .ibus-tweaker-orange-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-orange-candidate-box:hover {
-    background-color: rgba(225, 138, 59, 0.5);
-}
-
-.ibus-tweaker-orange-candidate-box:selected {
+.orange .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(225, 138, 59, 0.9);
 }
-
-.ibus-tweaker-orange-candidate-box:selected .ibus-tweaker-orange-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #FAC053
+ */
+.night-orange .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(250, 192, 83, 0.8);
 }
 
-.ibus-tweaker-orange-candidate-label {
-    padding: 0 4px;
+.night-orange .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(250, 192, 83, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-orange-candidate-page-button,
-.ibus-tweaker-orange-candidate-page-button-box,
-.ibus-tweaker-orange-candidate-page-button-previous,
-.ibus-tweaker-orange-candidate-page-button-next,
-.ibus-tweaker-orange-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-orange .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(250, 192, 83, 0.6);
 }
 
-.ibus-tweaker-orange-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-orange .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(250, 192, 83, 0.8);
 }
 
 
 /*
- * blue : #1793D0
+ *  #1793D0
  */
-.ibus-tweaker-blue-candidate-popup-content {
+.blue .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(23, 147, 208, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-blue-candidate-popup-text {
+.blue .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(23, 147, 208, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-blue-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.blue .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(23, 147, 208, 0.6);
 }
 
-.ibus-tweaker-blue-candidate-box .ibus-tweaker-blue-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-blue-candidate-box:hover {
-    background-color: rgba(23, 147, 208, 0.5);
-}
-
-.ibus-tweaker-blue-candidate-box:selected {
+.blue .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(23, 147, 208, 0.9);
 }
-
-.ibus-tweaker-blue-candidate-box:selected .ibus-tweaker-blue-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #8ABCDF
+ */
+.night-blue .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(138, 188, 223, 0.8);
 }
 
-.ibus-tweaker-blue-candidate-label {
-    padding: 0 4px;
+.night-blue .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(138, 188, 223, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-blue-candidate-page-button,
-.ibus-tweaker-blue-candidate-page-button-box,
-.ibus-tweaker-blue-candidate-page-button-previous,
-.ibus-tweaker-blue-candidate-page-button-next,
-.ibus-tweaker-blue-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-blue .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(138, 188, 223, 0.6);
 }
 
-.ibus-tweaker-blue-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-blue .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(138, 188, 223, 0.8);
 }
 
 
 /*
- * purple : #A951B4
+ *  #A951B4
  */
-.ibus-tweaker-purple-candidate-popup-content {
+.purple .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(169, 81, 180, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-purple-candidate-popup-text {
+.purple .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(169, 81, 180, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-purple-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.purple .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(169, 81, 180, 0.6);
 }
 
-.ibus-tweaker-purple-candidate-box .ibus-tweaker-purple-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-purple-candidate-box:hover {
-    background-color: rgba(169, 81, 180, 0.5);
-}
-
-.ibus-tweaker-purple-candidate-box:selected {
+.purple .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(169, 81, 180, 0.9);
 }
-
-.ibus-tweaker-purple-candidate-box:selected .ibus-tweaker-purple-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #EAB2F2
+ */
+.night-purple .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(234, 178, 242, 0.8);
 }
 
-.ibus-tweaker-purple-candidate-label {
-    padding: 0 4px;
+.night-purple .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(234, 178, 242, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-purple-candidate-page-button,
-.ibus-tweaker-purple-candidate-page-button-box,
-.ibus-tweaker-purple-candidate-page-button-previous,
-.ibus-tweaker-purple-candidate-page-button-next,
-.ibus-tweaker-purple-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-purple .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(234, 178, 242, 0.6);
 }
 
-.ibus-tweaker-purple-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-purple .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(234, 178, 242, 0.8);
 }
 
 
 /*
- * turquoise : #128F93
+ *  #128F93
  */
-.ibus-tweaker-turquoise-candidate-popup-content {
+.turquoise .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(18, 143, 147, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-turquoise-candidate-popup-text {
+.turquoise .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(18, 143, 147, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-turquoise-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.turquoise .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(18, 143, 147, 0.6);
 }
 
-.ibus-tweaker-turquoise-candidate-box .ibus-tweaker-turquoise-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-turquoise-candidate-box:hover {
-    background-color: rgba(18, 143, 147, 0.5);
-}
-
-.ibus-tweaker-turquoise-candidate-box:selected {
+.turquoise .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(18, 143, 147, 0.9);
 }
-
-.ibus-tweaker-turquoise-candidate-box:selected .ibus-tweaker-turquoise-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #5EC2C7
+ */
+.night-turquoise .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(94, 194, 199, 0.8);
 }
 
-.ibus-tweaker-turquoise-candidate-label {
-    padding: 0 4px;
+.night-turquoise .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(94, 194, 199, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-turquoise-candidate-page-button,
-.ibus-tweaker-turquoise-candidate-page-button-box,
-.ibus-tweaker-turquoise-candidate-page-button-previous,
-.ibus-tweaker-turquoise-candidate-page-button-next,
-.ibus-tweaker-turquoise-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-turquoise .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(94, 194, 199, 0.6);
 }
 
-.ibus-tweaker-turquoise-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-turquoise .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(94, 194, 199, 0.8);
 }
 
 
 /*
- * grey : #53586F
+ *  #53586F
  */
-.ibus-tweaker-grey-candidate-popup-content {
+.grey .ibus-tweaker-candidate-popup-content {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(83, 88, 111, 0.9);
-    border-radius: 0;
-    border-width: 1px;
-    padding: 0 !important;
 }
 
-.ibus-tweaker-grey-candidate-popup-text {
+.grey .ibus-tweaker-candidate-popup-text {
     color: rgba(0, 0, 0, 1);
-    border-width: 0;
-    border-bottom-width: 1px;
     border-color: rgba(83, 88, 111, 0.9);
-    padding: 0;
 }
 
-.ibus-tweaker-grey-candidate-box {
-    color: rgba(0, 0, 0, 1);
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
+.grey .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(83, 88, 111, 0.6);
 }
 
-.ibus-tweaker-grey-candidate-box .ibus-tweaker-grey-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 6px 4px 0 0;
-}
-
-.ibus-tweaker-grey-candidate-box:hover {
-    background-color: rgba(83, 88, 111, 0.5);
-}
-
-.ibus-tweaker-grey-candidate-box:selected {
+.grey .ibus-tweaker-candidate-box:selected {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(83, 88, 111, 0.9);
 }
-
-.ibus-tweaker-grey-candidate-box:selected .ibus-tweaker-grey-candidate-index {
-    color: inherit;
-    padding: 6px 4px 0 0;
+/*
+ *  #DCD9F0
+ */
+.night-grey .ibus-tweaker-candidate-popup-content {
+    background-color: rgba(37, 39, 44, 1);
+    border-color: rgba(220, 217, 240, 0.8);
 }
 
-.ibus-tweaker-grey-candidate-label {
-    padding: 0 4px;
+.night-grey .ibus-tweaker-candidate-popup-text {
+    color: rgba(255, 255, 255, 1);
+    border-color: rgba(220, 217, 240, 0.8);
 }
 
-/* hide page buttons */
-.ibus-tweaker-grey-candidate-page-button,
-.ibus-tweaker-grey-candidate-page-button-box,
-.ibus-tweaker-grey-candidate-page-button-previous,
-.ibus-tweaker-grey-candidate-page-button-next,
-.ibus-tweaker-grey-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
+.night-grey .ibus-tweaker-candidate-box:hover {
+    background-color: rgba(220, 217, 240, 0.6);
 }
 
-.ibus-tweaker-grey-candidate-popup-boxpointer {
-    -arrow-border-radius: 0;
-    -arrow-rise: 5px;
+.night-grey .ibus-tweaker-candidate-box:selected {
+    color: rgba(37, 39, 44, 1);
+    background-color: rgba(220, 217, 240, 0.8);
 }
 
